NIFI-15122 Refactored File Authorizer using DOM instead of JAXB
- Added unit tests for fingerprint reading and inheriting
- Removed JAXB 4.0 Maven Plugin

Signed-off-by: Pierre Villard <pierre.villard.fr@gmail.com>

This closes #10446.